// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Landing Renders correctly 1`] = `
<div>
  <div
    class="MuiContainer-root-3 WithStyles(ForwardRef(Container))-root-2 makeStyles-root-1 MuiContainer-maxWidthLg-9"
  >
    <div
      class="MuiPaper-root-14 makeStyles-paper-13 MuiPaper-elevation1-18 MuiPaper-rounded-15"
    >
      <div
        class="MuiGrid-root-42 makeStyles-firstRow-11 MuiGrid-container-43 MuiGrid-align-items-xs-center-51 MuiGrid-justify-content-xs-space-between-62"
      >
        <div>
          <label
            class="MuiFormControlLabel-root-145 makeStyles-checkbox-12"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-170 MuiIconButton-root-161 PrivateSwitchBase-root-157 MuiCheckbox-root-151 MuiCheckbox-colorPrimary-155 MuiIconButton-colorPrimary-165"
            >
              <span
                class="MuiIconButton-label-169"
              >
                <input
                  class="PrivateSwitchBase-input-160"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-173"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-488"
              />
            </span>
            <span
              class="MuiTypography-root-182 MuiFormControlLabel-label-150 MuiTypography-body1-184"
            >
              <p
                class="MuiTypography-root-182 MuiTypography-body2-183"
              >
                Only show deposits
              </p>
            </span>
          </label>
          <label
            class="MuiFormControlLabel-root-145 makeStyles-checkbox-12"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-170 MuiIconButton-root-161 PrivateSwitchBase-root-157 MuiCheckbox-root-151 MuiCheckbox-colorPrimary-155 MuiIconButton-colorPrimary-165"
            >
              <span
                class="MuiIconButton-label-169"
              >
                <input
                  class="PrivateSwitchBase-input-160"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-173"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-488"
              />
            </span>
            <span
              class="MuiTypography-root-182 MuiFormControlLabel-label-150 MuiTypography-body1-184"
            >
              <p
                class="MuiTypography-root-182 MuiTypography-body2-183"
              >
                Hide dust
              </p>
            </span>
          </label>
        </div>
        <div>
          <div
            aria-label="apy apr selector"
            class="MuiButtonGroup-root-214"
            role="group"
          >
            <button
              aria-selected="true"
              class="MuiButtonBase-root-170 MuiButton-root-238 MuiButton-outlined-243 MuiButtonGroup-grouped-220 MuiButtonGroup-groupedHorizontal-221 MuiButtonGroup-groupedOutlined-228 MuiButtonGroup-groupedOutlinedHorizontal-229 MuiButtonGroup-groupedOutlined-228 makeStyles-selected-212 makeStyles-button-213"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-239"
              >
                APY
              </span>
              <span
                class="MuiTouchRipple-root-488"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-170 MuiButton-root-238 MuiButton-outlined-243 MuiButtonGroup-grouped-220 MuiButtonGroup-groupedHorizontal-221 MuiButtonGroup-groupedOutlined-228 MuiButtonGroup-groupedOutlinedHorizontal-229 MuiButtonGroup-groupedOutlined-228 makeStyles-button-213"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-239"
              >
                APR
              </span>
              <span
                class="MuiTouchRipple-root-488"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-42 makeStyles-root-267 MuiGrid-container-43"
      >
        <div
          class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-true-76"
        >
          <div
            class="MuiFormControl-root-270 makeStyles-formControl-268"
          >
            <label
              class="MuiFormLabel-root-286 MuiInputLabel-root-274 MuiInputLabel-formControl-280 MuiInputLabel-animated-283 MuiInputLabel-outlined-285"
              data-shrink="false"
              id="status-selector-id-label"
            >
              Status
            </label>
            <div
              class="MuiInputBase-root-320 MuiOutlinedInput-root-305 MuiInputBase-formControl-321"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="status-selector-id-label status-selector"
                class="MuiSelect-root-294 MuiSelect-select-295 MuiSelect-selectMenu-298 MuiSelect-outlined-297 MuiInputBase-input-331 MuiOutlinedInput-input-315"
                id="status-selector"
                role="button"
                tabindex="0"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-304"
                data-testid="status-selector-input"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-173 MuiSelect-icon-300 MuiSelect-iconOutlined-303"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-342 MuiOutlinedInput-notchedOutline-314"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-344"
                >
                  <span>
                    Status
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-true-76"
        >
          <div
            class="MuiFormControl-root-270 makeStyles-formControl-346"
          >
            <label
              class="MuiFormLabel-root-286 MuiInputLabel-root-274 MuiInputLabel-formControl-280 MuiInputLabel-animated-283 MuiInputLabel-outlined-285"
              data-shrink="false"
              id="platform-selector-id-label"
            >
              Platform
            </label>
            <div
              class="MuiInputBase-root-320 MuiOutlinedInput-root-305 MuiInputBase-formControl-321"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="platform-selector-id-label platform-selector"
                class="MuiSelect-root-294 MuiSelect-select-295 MuiSelect-selectMenu-298 MuiSelect-outlined-297 MuiInputBase-input-331 MuiOutlinedInput-input-315"
                id="platform-selector"
                role="button"
                tabindex="0"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-304"
                data-testid="platform-selector-input"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-173 MuiSelect-icon-300 MuiSelect-iconOutlined-303"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-342 MuiOutlinedInput-notchedOutline-314"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-344"
                >
                  <span>
                    Platform
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-true-76"
        >
          <div
            class="MuiFormControl-root-270 makeStyles-formControl-348"
          >
            <label
              class="MuiFormLabel-root-286 MuiInputLabel-root-274 MuiInputLabel-formControl-280 MuiInputLabel-animated-283 MuiInputLabel-outlined-285"
              data-shrink="false"
              id="rewards-selector-id-label"
            >
              Rewards
            </label>
            <div
              class="MuiInputBase-root-320 MuiOutlinedInput-root-305 MuiInputBase-formControl-321"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="rewards-selector-id-label rewards-selector"
                class="MuiSelect-root-294 MuiSelect-select-295 MuiSelect-selectMenu-298 MuiSelect-outlined-297 MuiInputBase-input-331 MuiOutlinedInput-input-315"
                id="rewards-selector"
                role="button"
                tabindex="0"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-304"
                data-testid="rewards-selector-input"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-173 MuiSelect-icon-300 MuiSelect-iconOutlined-303"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-342 MuiOutlinedInput-notchedOutline-314"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-344"
                >
                  <span>
                    Rewards
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-true-76 MuiGrid-grid-md-true-104 MuiGrid-grid-lg-6-124"
        >
          <div
            class="MuiFormControl-root-270 MuiTextField-root-352 makeStyles-root-350"
          >
            <div
              class="MuiInputBase-root-320 MuiOutlinedInput-root-305 MuiInputBase-formControl-321 MuiInputBase-adornedEnd-325 MuiOutlinedInput-adornedEnd-310"
            >
              <input
                aria-invalid="false"
                aria-label="Vault Search"
                class="MuiInputBase-input-331 MuiOutlinedInput-input-315 MuiInputBase-inputAdornedEnd-336 MuiOutlinedInput-inputAdornedEnd-319"
                placeholder="Search by vault name, token, rewards..."
                type="text"
                value=""
              />
              <div
                class="MuiInputAdornment-root-353 MuiInputAdornment-positionEnd-356"
              >
                <button
                  aria-label="search"
                  class="MuiButtonBase-root-170 MuiIconButton-root-161 makeStyles-icon-351 MuiIconButton-sizeSmall-168"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-169"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-173"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-488"
                  />
                </button>
              </div>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-342 MuiOutlinedInput-notchedOutline-314"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-343"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
        >
          <button
            class="MuiButtonBase-root-170 MuiButton-root-238 MuiButton-text-240 MuiButton-textPrimary-241 MuiButton-fullWidth-261"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-239"
            >
              CLEAR ALL
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-14 MuiGrid-root-42 makeStyles-root-390 MuiGrid-container-43 MuiGrid-item-44 MuiPaper-elevation1-18 MuiPaper-rounded-15"
    >
      <div
        class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-spacing-xs-2-66"
      >
        <div
          class="MuiGrid-root-42 makeStyles-spacingItem-392 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
        />
        <div
          class="MuiGrid-root-42 makeStyles-title-383 makeStyles-columnTitle-388 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-align-items-xs-center-51 MuiGrid-grid-xs-true-76 MuiGrid-grid-lg-5-123"
        >
          <p
            class="MuiTypography-root-182 makeStyles-title-383 MuiTypography-body2-183 MuiTypography-colorTextSecondary-208"
          >
            Vault
          </p>
          <button
            aria-label="sort descending by name"
            class="MuiButtonBase-root-170 MuiIconButton-root-161 makeStyles-sortIcon-384 makeStyles-nonSetSort-386"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-169"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-384"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-42 makeStyles-title-383 makeStyles-columnTitle-388 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-align-items-xs-center-51 MuiGrid-justify-content-xs-flex-end-61 MuiGrid-grid-xs-true-76"
        >
          <p
            class="MuiTypography-root-182 MuiTypography-body2-183 MuiTypography-colorTextSecondary-208"
          >
            APY
          </p>
          <button
            aria-label="sort descending by APR"
            class="MuiButtonBase-root-170 MuiIconButton-root-161 makeStyles-sortIcon-384 makeStyles-nonSetSort-386"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-169"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-384"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-42 makeStyles-title-383 makeStyles-columnTitle-388 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-align-items-xs-center-51 MuiGrid-justify-content-xs-flex-end-61 MuiGrid-grid-xs-true-76"
        >
          <p
            class="MuiTypography-root-182 MuiTypography-body2-183 MuiTypography-colorTextSecondary-208"
          >
            My Deposits
          </p>
          <button
            aria-label="sort descending by balance"
            class="MuiButtonBase-root-170 MuiIconButton-root-161 makeStyles-sortIcon-384 makeStyles-nonSetSort-386"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-169"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-384"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-42 makeStyles-title-383 makeStyles-columnTitle-388 makeStyles-tvlColumn-389 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-align-items-xs-center-51 MuiGrid-justify-content-xs-flex-end-61 MuiGrid-grid-xs-true-76"
        >
          <p
            class="MuiTypography-root-182 MuiTypography-body2-183 MuiTypography-colorTextSecondary-208"
          >
            TVL
          </p>
          <button
            aria-label="sort descending by TVL"
            class="MuiButtonBase-root-170 MuiIconButton-root-161 makeStyles-sortIcon-384 makeStyles-nonSetSort-386"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-169"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-384"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-488"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-14 MuiCard-root-403 MuiGrid-root-42 makeStyles-root-394 MuiGrid-container-43 MuiGrid-direction-xs-column-46 MuiPaper-elevation1-18 MuiPaper-rounded-15"
    >
      <div
        class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-spacing-xs-2-66 MuiGrid-item-44"
      >
        <div
          class="MuiGrid-root-42 makeStyles-iconBadgeContainer-398 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
        >
          <div
            class="makeStyles-root-404"
          >
            <img
              alt="curve-renBTC-wBTC-sBTC logo"
              class="makeStyles-position-405"
              src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-align-items-xs-center-51 MuiGrid-grid-xs-true-76 MuiGrid-grid-lg-5-123"
        >
          <h6
            class="MuiTypography-root-182 makeStyles-vaultName-399 MuiTypography-subtitle1-193"
          >
            Curve.fi renBTC/wBTC/sBTC
          </h6>
          <div
            class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-spacing-xs-2-66"
          >
            <div
              class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
            >
              <span
                class="MuiTypography-root-182 makeStyles-label-407 makeStyles-clickableLabel-409 MuiTypography-caption-185 MuiTypography-displayInline-210"
              >
                Rewards:
              </span>
              <div
                class="MuiChip-root-410 makeStyles-tag-406 makeStyles-clickableTag-408 MuiChip-sizeSmall-411"
              >
                <span
                  class="MuiChip-label-432 MuiChip-labelSmall-433"
                >
                  Ecosystem Helper
                </span>
              </div>
            </div>
            <div
              class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
            >
              <span
                class="MuiTypography-root-182 makeStyles-label-407 MuiTypography-caption-185 MuiTypography-displayInline-210"
              >
                Platform:
              </span>
              <div
                class="MuiChip-root-410 makeStyles-tag-406 MuiChip-sizeSmall-411"
              >
                <span
                  class="MuiChip-label-432 MuiChip-labelSmall-433"
                >
                  Convex
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-align-items-xs-center-51 MuiGrid-justify-content-xs-flex-end-61 MuiGrid-grid-xs-true-76"
        >
          <div
            class="MuiBox-root-444 MuiBox-root-445 makeStyles-root-440"
          >
            <div
              class="MuiBox-root-444 MuiBox-root-446"
            >
              <p
                class="MuiTypography-root-182 MuiTypography-body1-184 MuiTypography-colorTextPrimary-207 MuiTypography-displayInline-210"
              >
                0.25%
              </p>
              <img
                alt="apy info icon"
                class="makeStyles-apyInfo-442"
                src="/assets/icons/apy-info.svg"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-justify-content-xs-flex-end-61 MuiGrid-grid-xs-true-76"
        >
          <div
            class="MuiBox-root-444 MuiBox-root-457"
          >
            <p
              class="MuiTypography-root-182 makeStyles-itemText-396 MuiTypography-body1-184"
            >
              $0
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-justify-content-xs-flex-end-61 MuiGrid-grid-xs-true-76"
        >
          <div
            class="MuiBox-root-444 MuiBox-root-461"
          >
            <p
              class="MuiTypography-root-182 makeStyles-itemText-396 MuiTypography-body1-184"
            >
              $135,697,015
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-14 MuiCard-root-403 MuiGrid-root-42 makeStyles-root-394 MuiGrid-container-43 MuiGrid-direction-xs-column-46 MuiPaper-elevation1-18 MuiPaper-rounded-15"
    >
      <div
        class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-spacing-xs-2-66 MuiGrid-item-44"
      >
        <div
          class="MuiGrid-root-42 makeStyles-iconBadgeContainer-398 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
        >
          <div
            class="makeStyles-root-404"
          >
            <img
              alt="BADGER logo"
              class="makeStyles-position-462"
              src="/assets/icons/badger.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-align-items-xs-center-51 MuiGrid-grid-xs-true-76 MuiGrid-grid-lg-5-123"
        >
          <h6
            class="MuiTypography-root-182 makeStyles-vaultName-399 MuiTypography-subtitle1-193"
          >
            Badger
          </h6>
          <div
            class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-spacing-xs-2-66"
          >
            <div
              class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
            >
              <span
                class="MuiTypography-root-182 makeStyles-label-407 makeStyles-clickableLabel-409 MuiTypography-caption-185 MuiTypography-displayInline-210"
              >
                Rewards:
              </span>
              <div
                class="MuiChip-root-410 makeStyles-tag-406 makeStyles-clickableTag-408 MuiChip-sizeSmall-411"
              >
                <span
                  class="MuiChip-label-432 MuiChip-labelSmall-433"
                >
                  DCA
                </span>
              </div>
            </div>
            <div
              class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
            >
              <span
                class="MuiTypography-root-182 makeStyles-label-407 MuiTypography-caption-185 MuiTypography-displayInline-210"
              >
                Platform:
              </span>
              <div
                class="MuiChip-root-410 makeStyles-tag-406 MuiChip-sizeSmall-411"
              >
                <span
                  class="MuiChip-label-432 MuiChip-labelSmall-433"
                >
                  Badger
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-align-items-xs-center-51 MuiGrid-justify-content-xs-flex-end-61 MuiGrid-grid-xs-true-76"
        >
          <div
            class="MuiBox-root-444 MuiBox-root-463 makeStyles-root-440"
          >
            <div
              class="MuiBox-root-444 MuiBox-root-464"
            >
              <p
                class="MuiTypography-root-182 MuiTypography-body1-184 MuiTypography-colorTextPrimary-207 MuiTypography-displayInline-210"
              >
                8.17%
              </p>
              <img
                alt="apy info icon"
                class="makeStyles-apyInfo-442"
                src="/assets/icons/apy-info.svg"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-justify-content-xs-flex-end-61 MuiGrid-grid-xs-true-76"
        >
          <div
            class="MuiBox-root-444 MuiBox-root-467"
          >
            <p
              class="MuiTypography-root-182 makeStyles-itemText-396 MuiTypography-body1-184"
            >
              $0
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-justify-content-xs-flex-end-61 MuiGrid-grid-xs-true-76"
        >
          <div
            class="MuiBox-root-444 MuiBox-root-470"
          >
            <p
              class="MuiTypography-root-182 makeStyles-itemText-396 MuiTypography-body1-184"
            >
              $10,000
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-14 MuiCard-root-403 MuiGrid-root-42 makeStyles-root-394 MuiGrid-container-43 MuiGrid-direction-xs-column-46 MuiPaper-elevation1-18 MuiPaper-rounded-15"
    >
      <div
        class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-spacing-xs-2-66 MuiGrid-item-44"
      >
        <div
          class="MuiGrid-root-42 makeStyles-iconBadgeContainer-398 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
        >
          <div
            class="makeStyles-root-404"
          >
            <img
              alt="DIGG logo"
              class="makeStyles-position-471"
              src="/assets/icons/digg.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-align-items-xs-center-51 MuiGrid-grid-xs-true-76 MuiGrid-grid-lg-5-123"
        >
          <h6
            class="MuiTypography-root-182 makeStyles-vaultName-399 MuiTypography-subtitle1-193"
          >
            Digg
          </h6>
          <div
            class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-spacing-xs-2-66"
          >
            <div
              class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
            >
              <span
                class="MuiTypography-root-182 makeStyles-label-407 MuiTypography-caption-185 MuiTypography-displayInline-210"
              >
                Platform:
              </span>
              <div
                class="MuiChip-root-410 makeStyles-tag-406 MuiChip-sizeSmall-411"
              >
                <span
                  class="MuiChip-label-432 MuiChip-labelSmall-433"
                >
                  Badger
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-align-items-xs-center-51 MuiGrid-justify-content-xs-flex-end-61 MuiGrid-grid-xs-true-76"
        >
          <div
            class="MuiBox-root-444 MuiBox-root-472 makeStyles-root-440"
          >
            <div
              class="MuiBox-root-444 MuiBox-root-473"
            >
              <p
                class="MuiTypography-root-182 MuiTypography-body1-184 MuiTypography-colorTextPrimary-207 MuiTypography-displayInline-210"
              >
                8.17%
              </p>
              <img
                alt="apy info icon"
                class="makeStyles-apyInfo-442"
                src="/assets/icons/apy-info.svg"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-justify-content-xs-flex-end-61 MuiGrid-grid-xs-true-76"
        >
          <div
            class="MuiBox-root-444 MuiBox-root-476"
          >
            <p
              class="MuiTypography-root-182 makeStyles-itemText-396 MuiTypography-body1-184"
            >
              $0
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-justify-content-xs-flex-end-61 MuiGrid-grid-xs-true-76"
        >
          <div
            class="MuiBox-root-444 MuiBox-root-479"
          >
            <p
              class="MuiTypography-root-182 makeStyles-itemText-396 MuiTypography-body1-184"
            >
              $2,874
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Renders mobile version correctly 1`] = `
<div>
  <div
    class="MuiContainer-root-3 WithStyles(ForwardRef(Container))-root-2 makeStyles-root-1 MuiContainer-maxWidthLg-9"
  >
    <div
      class="MuiPaper-root-14 makeStyles-paper-13 MuiPaper-elevation1-18 MuiPaper-rounded-15"
    >
      <div
        class="MuiGrid-root-42 MuiGrid-container-43"
      >
        <div
          class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-true-76"
        >
          <label
            class="MuiFormControlLabel-root-145"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-170 MuiIconButton-root-161 PrivateSwitchBase-root-157 MuiCheckbox-root-151 MuiCheckbox-colorPrimary-155 MuiIconButton-colorPrimary-165"
            >
              <span
                class="MuiIconButton-label-169"
              >
                <input
                  class="PrivateSwitchBase-input-160"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-173"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-490"
              />
            </span>
            <span
              class="MuiTypography-root-182 MuiFormControlLabel-label-150 MuiTypography-body1-184"
            >
              <p
                class="MuiTypography-root-182 MuiTypography-body2-183"
              >
                Only show deposits
              </p>
            </span>
          </label>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-justify-content-xs-flex-end-61 MuiGrid-grid-xs-true-76"
        >
          <button
            class="MuiButtonBase-root-170 MuiButton-root-238 MuiButton-text-240 makeStyles-button-488"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-239 makeStyles-buttonLabel-489"
            >
              <p
                class="MuiTypography-root-182 MuiTypography-body2-183 MuiTypography-displayInline-210"
              >
                Filters
              </p>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-173"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-490"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-14 MuiGrid-root-42 makeStyles-root-390 MuiGrid-container-43 MuiGrid-item-44 MuiPaper-elevation1-18 MuiPaper-rounded-15"
    >
      <div
        class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-spacing-xs-2-66"
      >
        <div
          class="MuiGrid-root-42 makeStyles-spacingItem-392 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
        />
        <div
          class="MuiGrid-root-42 makeStyles-title-383 makeStyles-columnTitle-388 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-align-items-xs-center-51 MuiGrid-grid-xs-true-76 MuiGrid-grid-lg-5-123"
        >
          <p
            class="MuiTypography-root-182 makeStyles-title-383 MuiTypography-body2-183 MuiTypography-colorTextSecondary-208"
          >
            Vault
          </p>
          <button
            aria-label="sort descending by name"
            class="MuiButtonBase-root-170 MuiIconButton-root-161 makeStyles-sortIcon-384 makeStyles-nonSetSort-386"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-169"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-384"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-490"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-42 makeStyles-title-383 makeStyles-columnTitle-388 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-align-items-xs-center-51 MuiGrid-grid-xs-true-76"
        >
          <p
            class="MuiTypography-root-182 MuiTypography-body2-183 MuiTypography-colorTextSecondary-208"
          >
            APY
          </p>
          <button
            aria-label="sort descending by APR"
            class="MuiButtonBase-root-170 MuiIconButton-root-161 makeStyles-sortIcon-384 makeStyles-nonSetSort-386"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-169"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-384"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-490"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-42 makeStyles-title-383 makeStyles-columnTitle-388 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-align-items-xs-center-51 MuiGrid-grid-xs-true-76"
        >
          <p
            class="MuiTypography-root-182 MuiTypography-body2-183 MuiTypography-colorTextSecondary-208"
          >
            My Deposits
          </p>
          <button
            aria-label="sort descending by balance"
            class="MuiButtonBase-root-170 MuiIconButton-root-161 makeStyles-sortIcon-384 makeStyles-nonSetSort-386"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-169"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-384"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-490"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-42 makeStyles-title-383 makeStyles-columnTitle-388 makeStyles-tvlColumn-389 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-align-items-xs-center-51 MuiGrid-grid-xs-true-76"
        >
          <p
            class="MuiTypography-root-182 MuiTypography-body2-183 MuiTypography-colorTextSecondary-208"
          >
            TVL
          </p>
          <button
            aria-label="sort descending by TVL"
            class="MuiButtonBase-root-170 MuiIconButton-root-161 makeStyles-sortIcon-384 makeStyles-nonSetSort-386"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-169"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-384"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-490"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-14 MuiCard-root-403 MuiGrid-root-42 makeStyles-root-500 MuiGrid-container-43 MuiGrid-direction-xs-column-46 MuiPaper-elevation1-18 MuiPaper-rounded-15"
    >
      <div
        class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44"
      >
        <div
          class="makeStyles-root-404"
        >
          <img
            alt="curve-renBTC-wBTC-sBTC logo"
            class="makeStyles-position-503"
            src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-182 makeStyles-name-502 MuiTypography-subtitle1-193 MuiTypography-displayInline-210"
        >
          Curve.fi renBTC/wBTC/sBTC
        </h6>
      </div>
      <div
        class="MuiGrid-root-42 makeStyles-info-501 MuiGrid-container-43 MuiGrid-item-44"
      >
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-direction-xs-column-46 MuiGrid-grid-xs-true-76"
        >
          <p
            class="MuiTypography-root-182 MuiTypography-body1-184"
          >
            APY
          </p>
          <div
            class="MuiBox-root-444 MuiBox-root-504 makeStyles-root-440"
          >
            <div
              class="MuiBox-root-444 MuiBox-root-505"
            >
              <p
                class="MuiTypography-root-182 MuiTypography-body1-184 MuiTypography-colorTextPrimary-207 MuiTypography-displayInline-210"
              >
                0.25%
              </p>
              <img
                alt="apy info icon"
                class="makeStyles-apyInfo-442"
                src="/assets/icons/apy-info.svg"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-direction-xs-column-46 MuiGrid-grid-xs-true-76"
        >
          <p
            class="MuiTypography-root-182 MuiTypography-body1-184"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-444 MuiBox-root-508"
          >
            <p
              class="MuiTypography-root-182 MuiTypography-body1-184"
            >
              $0
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-42 MuiGrid-item-44"
      >
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-spacing-xs-1-65"
        >
          <div
            class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
          >
            <div
              class="MuiChip-root-410 makeStyles-tag-406 makeStyles-clickableTag-408 MuiChip-sizeSmall-411"
            >
              <span
                class="MuiChip-label-432 MuiChip-labelSmall-433"
              >
                Ecosystem Helper
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
          >
            <div
              class="MuiChip-root-410 makeStyles-tag-406 MuiChip-sizeSmall-411"
            >
              <span
                class="MuiChip-label-432 MuiChip-labelSmall-433"
              >
                Convex
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-14 MuiCard-root-403 MuiGrid-root-42 makeStyles-root-500 MuiGrid-container-43 MuiGrid-direction-xs-column-46 MuiPaper-elevation1-18 MuiPaper-rounded-15"
    >
      <div
        class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44"
      >
        <div
          class="makeStyles-root-404"
        >
          <img
            alt="BADGER logo"
            class="makeStyles-position-509"
            src="/assets/icons/badger.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-182 makeStyles-name-502 MuiTypography-subtitle1-193 MuiTypography-displayInline-210"
        >
          Badger
        </h6>
      </div>
      <div
        class="MuiGrid-root-42 makeStyles-info-501 MuiGrid-container-43 MuiGrid-item-44"
      >
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-direction-xs-column-46 MuiGrid-grid-xs-true-76"
        >
          <p
            class="MuiTypography-root-182 MuiTypography-body1-184"
          >
            APY
          </p>
          <div
            class="MuiBox-root-444 MuiBox-root-510 makeStyles-root-440"
          >
            <div
              class="MuiBox-root-444 MuiBox-root-511"
            >
              <p
                class="MuiTypography-root-182 MuiTypography-body1-184 MuiTypography-colorTextPrimary-207 MuiTypography-displayInline-210"
              >
                8.17%
              </p>
              <img
                alt="apy info icon"
                class="makeStyles-apyInfo-442"
                src="/assets/icons/apy-info.svg"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-direction-xs-column-46 MuiGrid-grid-xs-true-76"
        >
          <p
            class="MuiTypography-root-182 MuiTypography-body1-184"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-444 MuiBox-root-514"
          >
            <p
              class="MuiTypography-root-182 MuiTypography-body1-184"
            >
              $0
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-42 MuiGrid-item-44"
      >
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-spacing-xs-1-65"
        >
          <div
            class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
          >
            <div
              class="MuiChip-root-410 makeStyles-tag-406 makeStyles-clickableTag-408 MuiChip-sizeSmall-411"
            >
              <span
                class="MuiChip-label-432 MuiChip-labelSmall-433"
              >
                DCA
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
          >
            <div
              class="MuiChip-root-410 makeStyles-tag-406 MuiChip-sizeSmall-411"
            >
              <span
                class="MuiChip-label-432 MuiChip-labelSmall-433"
              >
                Badger
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-14 MuiCard-root-403 MuiGrid-root-42 makeStyles-root-500 MuiGrid-container-43 MuiGrid-direction-xs-column-46 MuiPaper-elevation1-18 MuiPaper-rounded-15"
    >
      <div
        class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44"
      >
        <div
          class="makeStyles-root-404"
        >
          <img
            alt="DIGG logo"
            class="makeStyles-position-515"
            src="/assets/icons/digg.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-182 makeStyles-name-502 MuiTypography-subtitle1-193 MuiTypography-displayInline-210"
        >
          Digg
        </h6>
      </div>
      <div
        class="MuiGrid-root-42 makeStyles-info-501 MuiGrid-container-43 MuiGrid-item-44"
      >
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-direction-xs-column-46 MuiGrid-grid-xs-true-76"
        >
          <p
            class="MuiTypography-root-182 MuiTypography-body1-184"
          >
            APY
          </p>
          <div
            class="MuiBox-root-444 MuiBox-root-516 makeStyles-root-440"
          >
            <div
              class="MuiBox-root-444 MuiBox-root-517"
            >
              <p
                class="MuiTypography-root-182 MuiTypography-body1-184 MuiTypography-colorTextPrimary-207 MuiTypography-displayInline-210"
              >
                8.17%
              </p>
              <img
                alt="apy info icon"
                class="makeStyles-apyInfo-442"
                src="/assets/icons/apy-info.svg"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-direction-xs-column-46 MuiGrid-grid-xs-true-76"
        >
          <p
            class="MuiTypography-root-182 MuiTypography-body1-184"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-444 MuiBox-root-520"
          >
            <p
              class="MuiTypography-root-182 MuiTypography-body1-184"
            >
              $0
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-42 MuiGrid-item-44"
      >
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-spacing-xs-1-65"
        >
          <div
            class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
          >
            <div
              class="MuiChip-root-410 makeStyles-tag-406 MuiChip-sizeSmall-411"
            >
              <span
                class="MuiChip-label-432 MuiChip-labelSmall-433"
              >
                Badger
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Renders tablet version correctly 1`] = `
<div>
  <div
    class="MuiContainer-root-3 WithStyles(ForwardRef(Container))-root-2 makeStyles-root-1 MuiContainer-maxWidthLg-9"
  >
    <div
      class="MuiPaper-root-14 makeStyles-paper-13 MuiPaper-elevation1-18 MuiPaper-rounded-15"
    >
      <div
        class="MuiGrid-root-42 MuiGrid-container-43"
      >
        <div
          class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-true-76"
        >
          <label
            class="MuiFormControlLabel-root-145"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-170 MuiIconButton-root-161 PrivateSwitchBase-root-157 MuiCheckbox-root-151 MuiCheckbox-colorPrimary-155 MuiIconButton-colorPrimary-165"
            >
              <span
                class="MuiIconButton-label-169"
              >
                <input
                  class="PrivateSwitchBase-input-160"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-173"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-490"
              />
            </span>
            <span
              class="MuiTypography-root-182 MuiFormControlLabel-label-150 MuiTypography-body1-184"
            >
              <p
                class="MuiTypography-root-182 MuiTypography-body2-183"
              >
                Only show deposits
              </p>
            </span>
          </label>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-justify-content-xs-flex-end-61 MuiGrid-grid-xs-true-76"
        >
          <button
            class="MuiButtonBase-root-170 MuiButton-root-238 MuiButton-text-240 makeStyles-button-488"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-239 makeStyles-buttonLabel-489"
            >
              <p
                class="MuiTypography-root-182 MuiTypography-body2-183 MuiTypography-displayInline-210"
              >
                Filters & Search
              </p>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-173"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-490"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-14 MuiGrid-root-42 makeStyles-root-390 MuiGrid-container-43 MuiGrid-item-44 MuiPaper-elevation1-18 MuiPaper-rounded-15"
    >
      <div
        class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-spacing-xs-2-66"
      >
        <div
          class="MuiGrid-root-42 makeStyles-spacingItem-392 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
        />
        <div
          class="MuiGrid-root-42 makeStyles-title-383 makeStyles-columnTitle-388 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-align-items-xs-center-51 MuiGrid-grid-xs-true-76 MuiGrid-grid-lg-5-123"
        >
          <p
            class="MuiTypography-root-182 makeStyles-title-383 MuiTypography-body2-183 MuiTypography-colorTextSecondary-208"
          >
            Vault
          </p>
          <button
            aria-label="sort descending by name"
            class="MuiButtonBase-root-170 MuiIconButton-root-161 makeStyles-sortIcon-384 makeStyles-nonSetSort-386"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-169"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-384"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-490"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-42 makeStyles-title-383 makeStyles-columnTitle-388 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-align-items-xs-center-51 MuiGrid-grid-xs-true-76"
        >
          <p
            class="MuiTypography-root-182 MuiTypography-body2-183 MuiTypography-colorTextSecondary-208"
          >
            APY
          </p>
          <button
            aria-label="sort descending by APR"
            class="MuiButtonBase-root-170 MuiIconButton-root-161 makeStyles-sortIcon-384 makeStyles-nonSetSort-386"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-169"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-384"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-490"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-42 makeStyles-title-383 makeStyles-columnTitle-388 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-align-items-xs-center-51 MuiGrid-grid-xs-true-76"
        >
          <p
            class="MuiTypography-root-182 MuiTypography-body2-183 MuiTypography-colorTextSecondary-208"
          >
            My Deposits
          </p>
          <button
            aria-label="sort descending by balance"
            class="MuiButtonBase-root-170 MuiIconButton-root-161 makeStyles-sortIcon-384 makeStyles-nonSetSort-386"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-169"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-384"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-490"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-42 makeStyles-title-383 makeStyles-columnTitle-388 makeStyles-tvlColumn-389 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-align-items-xs-center-51 MuiGrid-grid-xs-true-76"
        >
          <p
            class="MuiTypography-root-182 MuiTypography-body2-183 MuiTypography-colorTextSecondary-208"
          >
            TVL
          </p>
          <button
            aria-label="sort descending by TVL"
            class="MuiButtonBase-root-170 MuiIconButton-root-161 makeStyles-sortIcon-384 makeStyles-nonSetSort-386"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-169"
            >
              <img
                alt="sort-icon"
                class="makeStyles-sortIcon-384"
                src="/assets/icons/vaults-sort-icon.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-490"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-14 MuiCard-root-403 MuiGrid-root-42 makeStyles-root-500 MuiGrid-container-43 MuiGrid-direction-xs-column-46 MuiPaper-elevation1-18 MuiPaper-rounded-15"
    >
      <div
        class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44"
      >
        <div
          class="makeStyles-root-404"
        >
          <img
            alt="curve-renBTC-wBTC-sBTC logo"
            class="makeStyles-position-503"
            src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-182 makeStyles-name-502 MuiTypography-subtitle1-193 MuiTypography-displayInline-210"
        >
          Curve.fi renBTC/wBTC/sBTC
        </h6>
      </div>
      <div
        class="MuiGrid-root-42 makeStyles-info-501 MuiGrid-container-43 MuiGrid-item-44"
      >
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-direction-xs-column-46 MuiGrid-grid-xs-true-76"
        >
          <p
            class="MuiTypography-root-182 MuiTypography-body1-184"
          >
            APY
          </p>
          <div
            class="MuiBox-root-444 MuiBox-root-504 makeStyles-root-440"
          >
            <div
              class="MuiBox-root-444 MuiBox-root-505"
            >
              <p
                class="MuiTypography-root-182 MuiTypography-body1-184 MuiTypography-colorTextPrimary-207 MuiTypography-displayInline-210"
              >
                0.25%
              </p>
              <img
                alt="apy info icon"
                class="makeStyles-apyInfo-442"
                src="/assets/icons/apy-info.svg"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-direction-xs-column-46 MuiGrid-grid-xs-true-76"
        >
          <p
            class="MuiTypography-root-182 MuiTypography-body1-184"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-444 MuiBox-root-508"
          >
            <p
              class="MuiTypography-root-182 MuiTypography-body1-184"
            >
              $0
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-42 MuiGrid-item-44"
      >
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-spacing-xs-1-65"
        >
          <div
            class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
          >
            <div
              class="MuiChip-root-410 makeStyles-tag-406 makeStyles-clickableTag-408 MuiChip-sizeSmall-411"
            >
              <span
                class="MuiChip-label-432 MuiChip-labelSmall-433"
              >
                Ecosystem Helper
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
          >
            <div
              class="MuiChip-root-410 makeStyles-tag-406 MuiChip-sizeSmall-411"
            >
              <span
                class="MuiChip-label-432 MuiChip-labelSmall-433"
              >
                Convex
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-14 MuiCard-root-403 MuiGrid-root-42 makeStyles-root-500 MuiGrid-container-43 MuiGrid-direction-xs-column-46 MuiPaper-elevation1-18 MuiPaper-rounded-15"
    >
      <div
        class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44"
      >
        <div
          class="makeStyles-root-404"
        >
          <img
            alt="BADGER logo"
            class="makeStyles-position-509"
            src="/assets/icons/badger.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-182 makeStyles-name-502 MuiTypography-subtitle1-193 MuiTypography-displayInline-210"
        >
          Badger
        </h6>
      </div>
      <div
        class="MuiGrid-root-42 makeStyles-info-501 MuiGrid-container-43 MuiGrid-item-44"
      >
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-direction-xs-column-46 MuiGrid-grid-xs-true-76"
        >
          <p
            class="MuiTypography-root-182 MuiTypography-body1-184"
          >
            APY
          </p>
          <div
            class="MuiBox-root-444 MuiBox-root-510 makeStyles-root-440"
          >
            <div
              class="MuiBox-root-444 MuiBox-root-511"
            >
              <p
                class="MuiTypography-root-182 MuiTypography-body1-184 MuiTypography-colorTextPrimary-207 MuiTypography-displayInline-210"
              >
                8.17%
              </p>
              <img
                alt="apy info icon"
                class="makeStyles-apyInfo-442"
                src="/assets/icons/apy-info.svg"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-direction-xs-column-46 MuiGrid-grid-xs-true-76"
        >
          <p
            class="MuiTypography-root-182 MuiTypography-body1-184"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-444 MuiBox-root-514"
          >
            <p
              class="MuiTypography-root-182 MuiTypography-body1-184"
            >
              $0
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-42 MuiGrid-item-44"
      >
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-spacing-xs-1-65"
        >
          <div
            class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
          >
            <div
              class="MuiChip-root-410 makeStyles-tag-406 makeStyles-clickableTag-408 MuiChip-sizeSmall-411"
            >
              <span
                class="MuiChip-label-432 MuiChip-labelSmall-433"
              >
                DCA
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
          >
            <div
              class="MuiChip-root-410 makeStyles-tag-406 MuiChip-sizeSmall-411"
            >
              <span
                class="MuiChip-label-432 MuiChip-labelSmall-433"
              >
                Badger
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-14 MuiCard-root-403 MuiGrid-root-42 makeStyles-root-500 MuiGrid-container-43 MuiGrid-direction-xs-column-46 MuiPaper-elevation1-18 MuiPaper-rounded-15"
    >
      <div
        class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44"
      >
        <div
          class="makeStyles-root-404"
        >
          <img
            alt="DIGG logo"
            class="makeStyles-position-515"
            src="/assets/icons/digg.svg"
          />
        </div>
        <h6
          class="MuiTypography-root-182 makeStyles-name-502 MuiTypography-subtitle1-193 MuiTypography-displayInline-210"
        >
          Digg
        </h6>
      </div>
      <div
        class="MuiGrid-root-42 makeStyles-info-501 MuiGrid-container-43 MuiGrid-item-44"
      >
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-direction-xs-column-46 MuiGrid-grid-xs-true-76"
        >
          <p
            class="MuiTypography-root-182 MuiTypography-body1-184"
          >
            APY
          </p>
          <div
            class="MuiBox-root-444 MuiBox-root-516 makeStyles-root-440"
          >
            <div
              class="MuiBox-root-444 MuiBox-root-517"
            >
              <p
                class="MuiTypography-root-182 MuiTypography-body1-184 MuiTypography-colorTextPrimary-207 MuiTypography-displayInline-210"
              >
                8.17%
              </p>
              <img
                alt="apy info icon"
                class="makeStyles-apyInfo-442"
                src="/assets/icons/apy-info.svg"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-item-44 MuiGrid-direction-xs-column-46 MuiGrid-grid-xs-true-76"
        >
          <p
            class="MuiTypography-root-182 MuiTypography-body1-184"
          >
            My Deposits
          </p>
          <div
            class="MuiBox-root-444 MuiBox-root-520"
          >
            <p
              class="MuiTypography-root-182 MuiTypography-body1-184"
            >
              $0
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-42 MuiGrid-item-44"
      >
        <div
          class="MuiGrid-root-42 MuiGrid-container-43 MuiGrid-spacing-xs-1-65"
        >
          <div
            class="MuiGrid-root-42 MuiGrid-item-44 MuiGrid-grid-xs-auto-75"
          >
            <div
              class="MuiChip-root-410 makeStyles-tag-406 MuiChip-sizeSmall-411"
            >
              <span
                class="MuiChip-label-432 MuiChip-labelSmall-433"
              >
                Badger
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
